syntax = "proto3";

package hello;
option go_package="./proto";

message HelloResponse {
    string message = 1;
}

message HelloEmpty{}

service HelloService{
  // stream
  rpc SayHello(HelloEmpty) returns (stream HelloResponse) {};
}